# MASTR

./: .gitignore  CMakeLists.txt  PROVISIONING.md  QUICK_START_TPM2.md  README.md  host_permanent_privkey.pem  index.html
.github/workflows/: build.yml  main.yml  release.yml  test.yml
annaqis_docs/: 0_INTEGRATION_GUIDE.md  1_ATTESTATION_STATE_MACHINE.md  2_SERIAL_PROTOCOL_FLOW.md  3_PROTOCOL_STATE_REFERENCE.md  4_WIFI_PROBLEM_ANALYSIS.md  5_WIFI_SOLUTION_ARCHITECTURE.md  6_WIFI_QUICK_IMPLEMENTATION.md  7_WIFI_DETAILED_GUIDE.md  8_WIFI_IMPLEMENTATION_CHECKLIST.md  ANNAQI_UPDATES.md  COMPLETE_ANALYSIS.md  INTEGRATION_READY.md  NETWORK_INTEGRATION_CHECKLIST.md  NETWORK_MODULE_ANALYSIS.md  README.md  START_HERE_YOUR_MODULE.md  SYSTEM_STABILITY_UPDATES_2025-11-11.md  YOUR_MODULE_SUMMARY.md  cpu_monitor.md  cpu_utilization_changes.md
docs/: TEST_CASE_MAPPING.md  TEST_SUMMARY.md  ap_http_architecture.md  protocol_specification.md  provisioning_flow.md
host/: ARCHITECTURE.md  README.md  __init__.py  api_client.py  bootstrap.py  config.py  crypto.py  crypto_interface.py  crypto_naive.py  debug.py  hybrid_key_storage.py  key_storage_interface.py  keyring_storage.py  logger.py  main.py  parser.py  protocol.py  provision.py  requirements.txt  runtime_heartbeat.py  serial_handler.py  test_key_storage.py  tpm2_crypto.py  tpm2_storage.py
host/demos/: debug.py  mutual_auth_demo.py
host/tests/: test_bootstrap_full.py  test_bootstrap_simple.py
include/: FreeRTOSConfig.h  ap_watchdog.h  api.h  atca_config.h  constants.h  cpu_monitor.h  crypt.h  crypto.h  flash_config.h  http_server.h  lwipopts.h  mbedtls_config.h  protocol.h  serial.h  wifi_ap.h
next-steps/: MASTR_TEST_SUMMARY.md  docs.md
src/: analyze_config.c  ap_watchdog.c  cpu_monitor.c  crypt.c  crypto.c  flash_config.c  hooks.c  main.c  mastr_test.c  protocol.c  serial.c
src/hal/: hal_pico_i2c.c  hal_pico_i2c.h
src/net/: wifi_ap.c  wifi_ap.h
src/net/ap/: ap_manager.c  ap_manager.h
src/net/api/: api.c  api.h
src/net/dhcp/: dhcpserver.c
src/net/http/: http_server.c  http_server.h
test/: API_TEST_REPORT.md  CMakeLists.txt  HTTP_SERVER_TEST_REPORT.md  HTTP_TEST_CASES.md  LWIP_MOCK_ANALYSIS.md  LWIP_MOCK_FLOW_DIAGRAM.md  README.md  TEST_REPORT.md  WIFI_MOCK_ANALYSIS.md  WIFI_MOCK_SUMMARY.md  generate_coverage.sh  test_api.c  test_common.c  test_crypto.c  test_http_server.c  test_http_server_example.c  test_integrity.c  test_nonce.c  test_protocol.c  test_provisioning.c  test_runner.c  test_serial.c  test_session.c  test_wifi_ap.c
test/mocks/: README_LWIP_MOCK.md  README_WIFI_MOCK.md  mock_atca.c  mock_atca.h  mock_crypto.c  mock_crypto.h  mock_lwip.c  mock_lwip.h  mock_pico_sdk.c  mock_pico_sdk.h  mock_time.c  mock_time.h  mock_wifi.c  mock_wifi.h
test/mocks/lwip/: ip4_addr.h  ip_addr.h  pbuf.h  tcp.h
